[package]
name = "archimedes-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
